apps/test-nginx/app_test.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mon-app-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-test
  template:
    metadata:
      labels:
        app: web-test
    spec:
      containers:
      - name: portfolio-next
        image: ghcr.io/andymalgonne/portfolio:sha-8e848a3
        imagePullPolicy: Always
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: service-app-test
spec:
  selector:
    app: web-test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
